# locstat

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yaml
.pre-commit/: autoflake_runner.bash  pytest_runner.bash
cloc/: __init__.py  __main__.py  _parsing.c  argparser.py  config.py  config.toml  parse_file.c  parsing.py  utils.py
cloc/data_structures/: __init__.py  config.py  config.toml  exceptions.py  typing.py
cloc/parsing/: __init__.py  directory.py  file.py
cloc/parsing/extensions/: _comment_data.c  _comment_data.h  _parsing.c  _parsing.pyi  _parsing_primitives.c
cloc/utilities/: core.py  presentation.py
locstat/: __init__.py  __main__.py  argparser.py  config.toml  languages.json
locstat/data_structures/: __init__.py  config.py  exceptions.py  output_keys.py  parse_modes.py  singleton.py  typing.py  verbosity.py
locstat/parsing/: __init__.py  directory.py
locstat/parsing/extensions/: _comment_data.c  _comment_data.h  _locstat.h  _parsing.c  _parsing.pyi  _parsing_primitives.c  _parsing_prinitives.h
locstat/utilities/: core.py  presentation.py
tests/: __init__.py  constants.py  fixtures.py
tests/integrity/: __init__.py  test_parsing_modes_consistency.py
tests/unit/: test_argument_parser.py  test_file_parsing.py  test_function_construction.py
